[package]
name = "exewrapper"
version = "0.1.0"
authors = ["Yuri Geinish <wilemyvu@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
toml = "0"
serde = { version = "1", features = ["derive"] }
itertools = "0"
winapi = { version ="0", features = ["processenv"] }
